hphp/test/zend/bad/ext/spl/tests/recursive_tree_iterator_002.php
<?php
try {
	new RecursiveTreeIterator();
} catch (InvalidArgumentException $e) {
	echo "InvalidArgumentException thrown\n";
}
?>
===DONE===